fix bug on IE10 - size of icons in toolbar

--- a/resources/www/prod/skins/ui-components/_answers-tools.scss
+++ b/resources/www/prod/skins/ui-components/_answers-tools.scss
@@ -72,6 +72,7 @@
     .dropdownButton button.btn-inverse img {
       margin: 0 2px;
       max-width: none;
+      width: 16px;
     }
     .dropdown-menu {
       min-width: 95px;
